recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:6: error: not enough arguments for method moveTo: (x$1: Double, x$2: Double)Unit.
Unspecified value parameter x$2.
		moveTo(100)
                      ^FourSquare:9: error: not enough arguments for method moveTo: (x$1: Double, x$2: Double)Unit.
Unspecified value parameter x$2.
			moveTo(100)
                              ^