recursion.lessons.recursion.square.FourSquare.scala.code
override def run() {
	setPos(0,0);
	
	for (i<-0 to 3){
		moveTo(100)
		for(j<-0 to 2){
			left(90)
			moveTo(100)
		}
		
	}
		

}
